Date	Added

2011/02/19
	* Rev. 14713 Added map-server feature settings file 'battle/feature.conf'. [Ai4rei]
	- Added setting 'feature.buying_store' to enable/disable the buying store system.
2011/02/15
	* Rev. 14707 Added map-server battle setting 'gm_check_minlevel'. [Ai4rei]
2011/02/06
	* Rev. 14700 Added char-server setting 'char_del_delay'. [Ai4rei]
2011/01/13
	* Rev. 14667 Removed ladmin settings (ladmin_athena.conf) and login-server settings for ladmin (login_athena.conf) (topic:262934). [Ai4rei]
2010/12/30
	* Rev. 14643 Updated mapcache up to 2010-12-01. Adds Bifrost, Dewata and Malangdo maps. [Ai4rei]
2010/12/12
	* Rev. 14587 Corrected wording of the setting homunculus_autoloot (since r12203). [Ai4rei]
2010/12/10
	* Rev. 14572 Applied update to charhelp.txt provided by EvilPuncker to match current charcommand behavior (bugreport:4632, follow up to r13403). [Ai4rei]
2010/10/10
	* Added cashfood_use_interval config setting. [Paradox924X]
2010/05/25
	* Rev. 14307 Added noteleport flag to nyd_dun02. [L0ne_W0lf]
2009/11/03
	* Rev. 14123 Added mapflags for WoESE guild dungeon. [L0ne_W0lf]
2009/10/18
	* Removed char_rename config setting, now hardcoded [ultramage]
2009/10/15
	* Rev. 14092 Added several 13.x and 12.1 map mapflags, might have missed some. [L0ne_w0lf]
2009/08/18
	* Rev. 14013 Just a conf update, and mapflags! [L0ne_W0lf]
	* Changed attribute_recover to no, being hit by the same element should not recover HP.
	* Added monster_noteleport to Okolnir quest maps. Will fix the tarot card issue.
2009/04/10
	* Rev. 13668 Inverted the way monster_ai 0x200 works, default is 0 again. [ultramage]
	* Rev. 13667 Default value for monster_ai is now 0x200. [L0ne_W0lf]
2009/04/02
	* Uncommented pvp_room in maps_athena.conf [Playtester]
2009/04/01
	* Removed online_check config options. [FlavioJS]
	* Clarified char_maintenance config option.
2009/03/31
	* Added missing pet_equip_min_friendly config option [ultramage]
2009/03/23